# issuetracker_backend

./: .env  .gitignore  Cargo.toml  README.md  issuetracker.sqlite3  rocket.toml
migrations/2019-11-23-221402_project/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/json/: mod.rs
src/routes/: issue_routes.rs  issues.rs  mod.rs  project_routes.rs  projects.rs
